add_shader(CAABoxShader)
target_link_libraries(shader_CAABoxShader PRIVATE hecl-light)
add_shader(CCameraBlurFilter)
target_link_libraries(shader_CCameraBlurFilter PRIVATE hecl-light)
add_shader(CColoredQuadFilter)
target_link_libraries(shader_CColoredQuadFilter PRIVATE hecl-light)
add_shader(CColoredStripShader)
target_link_libraries(shader_CColoredStripShader PRIVATE hecl-light)
add_shader(CDecalShaders)
target_link_libraries(shader_CDecalShaders PRIVATE hecl-light)
add_shader(CElementGenShaders)
target_link_libraries(shader_CElementGenShaders PRIVATE hecl-light)
add_shader(CEnergyBarShader)
target_link_libraries(shader_CEnergyBarShader PRIVATE hecl-light)
add_shader(CEnvFxShaders)
target_link_libraries(shader_CEnvFxShaders PRIVATE hecl-light)
add_shader(CFogVolumeFilter)
target_link_libraries(shader_CFogVolumeFilter PRIVATE hecl-light)
add_shader(CFogVolumePlaneShader)
target_link_libraries(shader_CFogVolumePlaneShader PRIVATE hecl-light)
add_shader(CLineRendererShaders)
target_link_libraries(shader_CLineRendererShaders PRIVATE hecl-light)
add_shader(CMapSurfaceShader)
target_link_libraries(shader_CMapSurfaceShader PRIVATE hecl-light)
add_shader(CMoviePlayerShader)
target_link_libraries(shader_CMoviePlayerShader PRIVATE hecl-light)
add_shader(CNESShader)
target_link_libraries(shader_CNESShader PRIVATE hecl-light)
add_shader(CParticleSwooshShaders)
target_link_libraries(shader_CParticleSwooshShaders PRIVATE hecl-light)
add_shader(CPhazonSuitFilter)
target_link_libraries(shader_CPhazonSuitFilter PRIVATE hecl-light)
add_shader(CRadarPaintShader)
target_link_libraries(shader_CRadarPaintShader PRIVATE hecl-light)
add_shader(CRandomStaticFilter)
target_link_libraries(shader_CRandomStaticFilter PRIVATE hecl-light)
add_shader(CScanLinesFilter)
target_link_libraries(shader_CScanLinesFilter PRIVATE hecl-light)
add_shader(CSpaceWarpFilter)
target_link_libraries(shader_CSpaceWarpFilter PRIVATE hecl-light)
add_shader(CTextSupportShader)
target_link_libraries(shader_CTextSupportShader PRIVATE hecl-light)
add_shader(CTexturedQuadFilter)
target_link_libraries(shader_CTexturedQuadFilter PRIVATE hecl-light)
add_shader(CThermalColdFilter)
target_link_libraries(shader_CThermalColdFilter PRIVATE hecl-light)
add_shader(CThermalHotFilter)
target_link_libraries(shader_CThermalHotFilter PRIVATE hecl-light)
add_shader(CWorldShadowShader)
target_link_libraries(shader_CWorldShadowShader PRIVATE hecl-light)
add_shader(CXRayBlurFilter)
target_link_libraries(shader_CXRayBlurFilter PRIVATE hecl-light)
add_special_shader(shader_CFluidPlaneShader
                   shader_CFluidPlaneShader.cpp
                   shader_CFluidPlaneShaderGLSL.cpp
                   shader_CFluidPlaneShaderHLSL.cpp
                   shader_CFluidPlaneShaderMetal.cpp)
target_link_libraries(shader_CFluidPlaneShader PRIVATE hecl-light)
add_special_shader(shader_CModelShaders
                   shader_CModelShadersGLSL.cpp
                   shader_CModelShadersHLSL.cpp
                   shader_CModelShadersMetal.cpp)
target_link_libraries(shader_CModelShaders PRIVATE hecl-light nod)
# FIXME hack for DataSpec includes
target_include_directories(shader_CModelShaders PRIVATE ${CMAKE_SOURCE_DIR})